k8s_cluster/k8s_network_policies/backend-network-policy.yaml
# This k8s network policy is applied on the backend api service
#INGRESS - allows inbound traffic only from frontend service on the backend api server port 5000.
#EGRESS - allow outbount traffic to only redisdatabase service on port 6379 and kubedns
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-network-policy
  namespace: backend
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: frontend
      podSelector:
        matchLabels:
          app: frontend
    ports:
        - protocol: TCP
          port: 5000
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          project: database
      podSelector:
        matchLabels:
          app: redis
    ports:
        - protocol: TCP
          port: 6379
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
        - protocol: TCP
          port: 9153
  - to:
    - ipBlock:
          cidr: 74.125.34.46/32
    ports:
        - protocol: TCP
          port: 443
